syntax = "proto3";

package payments;

service BitcoinService {
    rpc SendPayment (SendPaymentRequest) returns (SendPaymentResponse);
}

message SendPaymentRequest {
    string from_addr = 1;
    string to_addr = 2;
    uint32 amount = 3;
}

message SendPaymentResponse {
    bool successful = 1;
    string message = 2;
}